all structure changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <h1>Welcome to WebRTC Video Conference</h1>
     <video id="localVideo" autoplay muted></video>
     <video id="remoteVideo" autoplay></video>
+    <button id="startButton">Start Conference</button>
+    <button id="joinButton">Join Conference</button>
     <script src="/static/js/main.js"></script>
 </body>
 </html>
