--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -12,7 +12,7 @@
     <main id="lobby-container">
         <div id="form-container">
             <div id="form__container__header">
-                <p>👋 Create OR Join a Room</p>
+                <p>Create OR Join Private Conference</p>
             </div>
 
             <div id="form__content__wrapper">
